# flash-attention

hopper/: .gitignore  CMakeLists.txt  Makefile.test_varlen  README_BUILD.md  README_USAGE.md  build_full.sh  build_minimal.sh  build_standalone.sh  compile.sh  compile_simple.sh  cutlass_workaround.h  flash_api_standalone.cpp  flash_api_standalone.h  test_dense_inference.cpp  test_varlen_inference.cpp
